fix version mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  overflow: hidden;
 }
 body {
   font-family: 'Raleway', sans-serif;
